k8s/class-code/lecture4-ingress/k8s/frotnend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  tls:
  - hosts:
    - hodi.local
    secretName: tls-secrets
  rules:
  - host: hodi.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
